[metadata]
name = yeison_todo
version = file: yeison_todo/VERSION
description = A small hello world app
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
author = Yeison Vargas
author_email = yeisonvargasjf@gmail.com
url = https://github.com/pyupio/yeison_todo
project_urls =
    Bug Tracker = https://github.com/pyupio/yeison_todo/issues
    Source = https://github.com/pyupio/yeison_todo/
keywords = yeison_todo, hello world
license = MIT license
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = yeison_todo
package_dir =
    yeison_todo = yeison_todo
install_requires =
    setuptools>=19.3
    Click>=8.0.2
    requests
    packaging>=21.0
    dparse>=0.5.1
    ruamel.yaml>=0.17.21

[options.entry_points]
console_scripts =
    yeison_todo = yeison_todo.cli:cli

python_requires = >=3.6

[flake8]
exclude = docs
